2008-12-06 (rc2 of v1.6)
	* bugfix of Freecode rename button and others.
	* Memo in Popup menu in Files Tab.
	* Enhance Mark buttons, so it will not save duplicated information in database.
	* New function relation() for caculating relation between two coding.
	* Improve ViewFileFun() so the codings are highlighted when a file is opened.
	* Add some popup menus.
	* Improve pdelete(),list.deleted() and undelete(). New function of CleanProject().

2008-12-05
	* New functionality of add memo to File category and Code category.
	* Reorganize the memo for Cases.  Now opem case memo by double-click or popup menu
	* Unmark button for cases.
	* Add Settings Tab, so user can change settings easily.
	
2008-12-04
	* Better handler colors for coding and case-mark. Now can customize colors for coding-mark 
	(set .rqda$fore.col, default is "blue") and case-mark (set .rqda$back.col, default is "gray92").
	* Add selected file to File-category by popup menu in Files Tab.
	* Popup menu in Cases tab to link files with selected case.
	* Drop selected Files from Files.of.This.Case Widget by clicking popu menu.
	
2008-12-03
	* Attached file to case by pop-up menu in Files Tab.
	* Now can open associated files of a case from Cases Tab.
	* new function of write.FileList() to import a batch of files.

	
2008-12-01
	* enhance the rename buttons.
	* bugfix of add buttons: continue only when click confirm in the ginput widget.
	* New function write.FileList() to import files by batch.
	* Enchance the retrieval2 function so coding on the file (openned by clicking back button) is possible.
	
2008-11-30
	* fix some minor bugs.
	
2008-11-29
	* enhancement of function list.deleted() and pdelete()
	* better handle the encoding issue in ViewFileButton and handler for openning a file.
	* Add F-Cat (file-category) to help organized the files.
	* Add doubleclick handlers to CodeOfCat and FileOfCat to retrieve coding and open file.
	* fix typo (Thanks Adrian Dusa)